# frvt

11/doc/: version.txt
11/lib/opencv2/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVGenPkgConfig.info.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt  opencv_data_config.hpp  opencv_python_config.cmake
11/lib/opencv2/apps/: CTestTestfile.cmake  Makefile  cmake_install.cmake
11/lib/opencv2/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
11/lib/opencv2/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
11/lib/opencv2/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
11/lib/opencv2/lib/: libopencv_aruco.so.4.2.0  libopencv_bgsegm.so.4.2.0  libopencv_bioinspired.so.4.2.0  libopencv_calib3d.so.4.2.0  libopencv_ccalib.so.4.2.0  libopencv_datasets.so.4.2.0  libopencv_dnn_objdetect.so.4.2.0  libopencv_dnn_superres.so.4.2.0  libopencv_dpm.so.4.2.0  libopencv_face.so.4.2.0  libopencv_flann.so.4.2.0  libopencv_fuzzy.so.4.2.0  libopencv_highgui.so.4.2.0  libopencv_line_descriptor.so.4.2.0  libopencv_ml.so.4.2.0  libopencv_objdetect.so.4.2.0  libopencv_optflow.so.4.2.0  libopencv_phase_unwrapping.so.4.2.0  libopencv_rgbd.so.4.2.0  libopencv_shape.so.4.2.0  (+15 more)
11/scripts/: build_face_daksha.sh  compile_and_link.sh
11/src/facedakshaImp/: CMakeLists.txt  facedakshafrvt11.cpp  facedakshafrvt11.h
11/validation/: enroll.log.0
11/validation/templates/: 1.template  3.template  5.template  7.template
(+474 files in other folders)
